--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "proofly-js",
   "version": "1.0.0",
+  "description": "A tiny JS tracking library for personal conversion tracking with a local dashboard",
   "main": "index.js",
   "bin": {
     "proofly-init": "./bin/init-dashboard.js"
   },
-  "type": "module"
+  "type": "module",
+  "keywords": ["tracking", "conversion", "proofly", "analytics"],
+  "author": "Your Name",
+  "license": "MIT"
 }
